--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(23, 24, 24);
+  /* background-color: rgb(126 118 83); */
 }
 
 code {
