--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -1,13 +1,19 @@
 .img{
     width: 115px;
     height: 100px;
-    border-radius: 22px;
+    border-radius: 33px;
+    padding: .5rem;
+    transition: 1s all;
+}
+
+.img:hover{
+    width: 135px;
+    height: 120px;
+    box-shadow: 10px 10px 7px 2px rgb(8, 8, 8);
 }
 
 .content{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    margin-top: 2rem;
 }
 
 .contain{
@@ -21,4 +27,11 @@
 .spin{
     margin: 0 auto;
     transition-duration: 3s;
+}
+
+.text{
+    font-family: 'Red Hat Mono', monospace;
+    color: white;
+    padding: 5rem;
+    font-size: 1.3em;
 }
