--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@
 .foto {
   height: 30vmin;
   width: 25vmin;
-  box-shadow: 10px 10px 7px 2px rgb(122, 114, 76);
+  border-radius: 10px;
+  /* box-shadow: 10px 10px 7px 2px rgb(122, 114, 76); */
   /* margin-left: -26rem;  */
   
 }
