--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -22,3 +22,42 @@
     margin-left: 1rem;
   }
   
+
+.form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 8rem;
+    font-family: 'Fira Sans Extra Condensed';
+    color: white;
+}
+
+
+.form_text{
+    height: 30px;
+    border: aquamarine;
+    border-radius: 5px;
+    width: 30%;
+    margin: 1rem;
+    padding: .5rem;
+    opacity: 30%;
+}
+
+.form_area{
+    height: 90px !important;
+    border: aquamarine;
+    border-radius: 5px;
+    width: 30% !important;
+    margin: 1rem;
+    padding: .5rem;
+    opacity: 30%;
+}
+
+input{
+    width: 20%;
+    height: 35px;
+    border-radius: 5px;
+    opacity: 30%;
+}
