--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -55,9 +55,15 @@
     opacity: 30%;
 }
 
-input{
-    width: 20%;
+.envia{
     height: 35px;
     border-radius: 5px;
     opacity: 30%;
+    transition:  2s;
+
+}
+
+.envia:hover{
+    background-color: rgb(111, 152, 179);
+    width: 70px;
 }
